# redistricting

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.toml  pyproject.toml
redistricting/: __init__.py  apportionment.py  cl_argument_parsing.py  config_parsing.py  data_acquisition.py  data_cleaning.py  data_loading.py  data_processing.py
redistricting/apportionment/: __init__.py  apportionment.py
redistricting/config_parsing/: __init__.py  census_blocks_config.py  config.py  country_data_config.py  downloads_config.py  fips_identifiers_config.py  state_data_config.py  state_population_config.py  state_shapes_config.py
redistricting/splitline/: __init__.py  flat_geometry.py  spherical_geometry.py  splitline.py
