[project]
name = "redistricting"
dynamic = ["version"]
authors = [{ name = "Trystan Koch", email = "Trystan.Koch@gmail.com" }]
maintainers = [{ name = "Trystan Koch", email = "Trystan.Koch@gmail.com" }]
description = "Political redistricting based on simple, unbiased algorithms."
keywords = [
  "politics",
  "apportionment",
  "geography",
  "census",
  "redistricting",
  "districting",
  "splitline",
  "voting",
  "GIS",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pandas", "geopandas", "pyproj", "numpy", "openpyxl"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Legal Industry",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

  [project.scripts]
  #redistrict-splitline = ""
  #redistrict-leastquares = ""
  #redistrict-circle-splitline = ""

[tool.ruff]
line-length = 79

  [tool.ruff.lint]
  extend-select = [
    "D",  # pydocstyle
    "E",
    "W",
    "PD",
    "PL",
    "RUF",
    "TRY"
  ]

  [tool.ruff.lint.pydocstyle]
  convention = "numpy"

[tool.setuptools]
py-modules = ["redistricting"]
